--- a/index.html
+++ b/index.html
@@ -354,7 +354,7 @@ function prepareTree(){
 /*
 The most vital tree code is below
 Here we find moves that are similar and positioning them to be vertically in the middle of the first similar move and the last
-Theres most likely a more efficient way to do this but as of now I am using this approach.
+There are definitely more efficient ways to go about this, but as of now I am using this approach.
 */
 let poses = [];
 for(let r = 1; r < moves.length; r++){
