--- a/index.html
+++ b/index.html
@@ -342,11 +342,12 @@ function updateArray(move){
 //This function converts the data from being a simple list of the move array to a tree
 function prepareTree(){
   //This initially lays out the array like a grid
+    let yoffset = window.innerHeight * .8 / 2 + 15;
    let offset = moves.length * -40;
    for(let r = 0; r < moves.length; r++){
     for(let c = 0; c < moves[r].length; c++){
         let x =  c * 150;
-        let y = 300 + offset + r * 80;
+        let y = yoffset + offset + r * 80;
         moves[r][c][2] = x;
         moves[r][c][3] = y;
     }
